--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -101,11 +101,30 @@ body {
   .para{
     padding-bottom: 20px;
   }
-  .contact{
-    padding: 10px;
-    border-radius: 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    background-color: #11999E;
-    color:#EAF6F6 ;
+  .btn {
+    background: #61c0ff;
+    background-image: -webkit-linear-gradient(top, #61c0ff, #306c91);
+    background-image: -moz-linear-gradient(top, #61c0ff, #306c91);
+    background-image: -ms-linear-gradient(top, #61c0ff, #306c91);
+    background-image: -o-linear-gradient(top, #61c0ff, #306c91);
+    background-image: linear-gradient(to bottom, #61c0ff, #306c91);
+    -webkit-border-radius: 15;
+    -moz-border-radius: 15;
+    border-radius: 15px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    border: solid #1f628d 2px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #ffffff;
+    background-image: -webkit-linear-gradient(top, #ffffff, #3081b8);
+    background-image: -moz-linear-gradient(top, #ffffff, #3081b8);
+    background-image: -ms-linear-gradient(top, #ffffff, #3081b8);
+    background-image: -o-linear-gradient(top, #ffffff, #3081b8);
+    background-image: linear-gradient(to bottom, #ffffff, #3081b8);
+    text-decoration: none;
   }
